# CryptoPredictiveAI

deployments/dev/news/: news-cm.yaml  news-d.yaml
deployments/dev/news-sentiment/: news-sentiment-d.yaml
deployments/prod/prediction-generator/: prediction-generator-cm.yaml
deployments/prod/training-pipeline/: training-pipeline-cj.yaml  training-pipeline-cm.yaml
docker/: news-sentiment.Dockerfile  news.Dockerfile
services/news/: pyproject.toml
services/news_sentiment/: Makefile  pyproject.toml
services/news_sentiment/data/: README.md
services/news_sentiment/src/news_sentiment/: config.py  dataset.py  main.py  sentiment_extractor.py
services/news_sentiment/src/news_sentiment/baml_src/: clients.baml  generators.baml  sentiment_scores.baml
