[project]
name = "news-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "brunoclbr", email = "bruno.copa@rwth-aachen.de" }
]
requires-python = ">=3.12"
dependencies = [
    "baml-py==0.211.0",
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "opik>=1.8.69",
    "pandas>=2.2.2",
    "quixstreams>=3.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
